@@ -275,8 +275,6 @@ SRC = src/main.c \
 	src/response.c \
 	src/handler.c \
 	src/file-handler.c \
-	src/cgi-handler.c \
-	src/fcgi-handler.c \
 	src/proxy-handler.c \
 	src/errdoc.c \
 	src/ajp-protocol.c \
