@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.8.9) unstable; urgency=low
   * (f?)cgi-handler: forward query string only if focused
   * ajp-handler: merge into proxy-handler
   * proxy-handler: forward query string if focused
+  * cgi, fastcgi-handler: enable the resource cache
 
  --
 
